--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,63 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# Maven #
+#########
+target
+pom.xml.versionsBackup
+dependency-reduced-pom.xml
+**/target/
 
-# testing
+# Eclipse #
+# based on https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore #
+###########
+.settings
+.project
+.classpath
+.springWebflow
+.metadata
+.springBeans
+**/.externalToolBuilders/
+*Servers/
+
+# JetBrains #
+# based on https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore #
+#######################################################################################
+*.iml
+.idea/
+*.ipr
+*.iws
+/out/
+.idea_modules/
+atlassian-ide-plugin.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Node/NPM/Yarn #
+#################
+node
+**/node/
+**/node_modules/
+
+# Bower #
+############
+**/bower/
+
+# Webpack #
+############
+**/dist/
+
+# Testing  #
+############
 /coverage
 
-# production
+# Production  #
+###############
 /build
 
-# misc
+# Misc  #
+#########
 .DS_Store
 .env.local
 .env.development.local
@@ -19,3 +67,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Other #
+#########
+*.*~
+*.orig
+.gitconfig
+docker
